feat: intro form

--- a/components/header.html
+++ b/components/header.html
@@ -5,8 +5,9 @@
             <li><a href="index.html" title="Home">Home</a></li>
             <li><a href="introduction.html" title="Introduction">Introduction</a></li>
             <li><a href="contract.html" title="Contract">Contract</a></li>
-            <li><a href="website_evaluations.html" title="CRAP Evaluation">Website Evaulations</a></li>
+            <li><a href="website_evaluations.html" title="CRAP Evaluation">Website Evaluations</a></li>
             <li><a href="fccfsjs_outline.html" title="FCC Full Stack JavaScript Outline">FCC Full Stack JavaScript Outline</a></li>
+            <li><a href="intro_form.html" title="Introduction Form">Introduction Form</a></li>
         </ul>
     </nav>
     <nav id="secondary-nav"><ul>
