feat: update peer review

--- a/components/header.html
+++ b/components/header.html
@@ -17,5 +17,7 @@
         <li><a href="hobby\index.html" title="Hobby">Hobby</a></li>
         <li><a href ="hsrethics\index.html" title="Client">Client Project</a></li>
         <li><a href="https://itis3135-react-neon.vercel.app/">React3</a></li>
+        <li><a href="review1.html">Review 1</a></li>
+        <li><a href="review2.html">Review 2</a></li>
     </ul></nav>
 </header>
